CronExpression minor code fixes